# University

./: README.md  clue.txt  Новый текстовый документ.txt
BNTUterm2/: моя Курсовая ОАиП.docx
BNTUterm2/ЛАБА 12/: 12.txt  12отчетоаип.docx
BNTUterm2/ЛАБА 12/ConsoleApplication1/: ConsoleApplication1.sln
BNTUterm2/ЛАБА 12/курсовая/: курсовая.sln
BNTUterm2/ЛАБА10/: 10.txt  10отчетоаип.docx
BNTUterm2/ЛАБА11/: 11.txt  11отчетоаип.docx
BNTUterm2/ЛАБА11/lab11/: lab11.sln
BNTUterm2/ЛАБА2/: Новый текстовый документ (2) — копия.txt  Отчет лб 2ОАиП.docx
BNTUterm2/ЛАБА3/: Новый текстовый документ (2) — копия.txt
BNTUterm2/ЛАБА4/: Новый текстовый документ.txt
BNTUterm2/ЛАБА5/: Новый текстовый документ.txt
BNTUterm2/ЛАБА6/: Новый текстовый документ.txt
BNTUterm2/ЛАБА7/: Лаба 7оаип.txt  Отчет лб 7.docx
BNTUterm2/ЛАБА8/: 8лаба.txt  laba 8.cpp  Отчет лб 8.docx
BNTUterm2/ЛАБА9/: 9gotov.docx  9лаба.txt
BNTUterm3/: OS (C) - Ярлык.lnk
BNTUterm3/DELPHI/: ~$бораторный практикум РАЗРАБОТКА ПРИЛОЖЕНИЙ В ВИЗУАЛЬНЫХ СРЕДАХ.doc  отчеты.docx
BNTUterm3/DELPHI/11delphi/: Unit1.dcu  Unit1.dfm  Unit1.pas  Unit3.dfm  Unit3.pas  Unit4.dcu  Unit4.pas  lab11.dpr
BNTUterm3/DELPHI/14delphi/: Lab10.ini  MyIni.ini  Project1.dof  Project1.dpr  Unit1.dfm  Unit2.pas  Unit3.dfm  Unit4.dcu  Unit4.dfm  lab1.dcu  lab1.dfm  lab1.pas  lab3.dfm  lab3.pas  lab33.dof  lab4.dcu  lab4.dfm  lab4.pas  lab44.dpr  lab5.dcu  lab5.dfm  lab5.pas  lab55.dpr  lab6.dcu  lab6.dfm  lab6.pas  lab8.dfm  lab8.pas  lab9.dcu  lab9.dfm  lab9.pas  lla.dpr
BNTUterm3/DELPHI/1delphi/: Unit1.dcu  Unit1.dfm  Unit1.pas
BNTUterm3/DELPHI/2delphi/: Unit1.dcu  Unit1.dfm  Unit1.pas
BNTUterm3/DELPHI/3delphi/: Unit1.dcu  Unit1.dfm  Unit1.pas
BNTUterm3/DELPHI/4delphi/: Unit1.dcu  Unit1.dfm  Unit1.pas
BNTUterm3/DELPHI/5delphi/: Unit1.dfm  Unit1.pas
BNTUterm3/Prolog/: семья.doc
BNTUterm3/Prolog/VIP52/HTML/vipexamples/geni/: about.htm  animal.gni  animal.htm  geni_cgiprogram.htm  pdcindex.htm  program.htm  readme.htm  starting.gni  starting.htm  tyre.gni  tyre.htm
BNTUterm3/Prolog/VIP52/HTML/vipexamples/geni/animals/: albatros.htm  animals.htm  bird3.htm  cheetah.htm  flywell.htm  giraffe.htm  meateat.htm  swim.htm
BNTUterm3/Prolog/VIP52/HTML/vipexamples/geni/car/: car1.htm  carrepht.htm  motor.htm  problem.htm  start1.htm  start2.htm  start3.htm  start4.htm  tyre.htm  tyre1.htm  tyre2.htm
BNTUterm4/Linux labs/: GreatReport.docx
BNTUterm4/Networks C#/: Spisok_tem_KP_2020.docx
BNTUterm5/English/: Exam.docx  Eye scanning.docx  UNIT 8 (Полная версия) (1).docx  Unit 5 (Полная версия).docx  Unit 6 (Полная версия).docx  Unit 7 (Полная версия).docx
BNTUterm5/decision/: GLOBAL.docx
BNTUterm6/: berndown.docx
BNTUterm6/CompModeling/: channel.drawio  channel.m
BNTUterm6/Database/: exam.docx  task.docx
BNTUterm6/Multithreading/: RiPOD Prihozhy Anatoly 2016 (1).docx  Вопросы_к_Билетам_РиПОД_Прихожий_2017.doc
BNTUterm6/Reliability/: Itogovy.docx  exam.docx  test.docx
BNTUterm6/amron/: ticket.docx  Отчет.docx
C# проект1/Serial port test/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Program.cs  Serial port test.csproj  logs.txt
DELPHI/: Лабораторный практикум РАЗРАБОТКА ПРИЛОЖЕНИЙ В ВИЗУАЛЬНЫХ СРЕДАХ.doc
DELPHI/11delphi/: Unit1.dfm  Unit1.pas  Unit3.dcu  Unit3.dfm  Unit3.pas  Unit4.dfm  Unit4.pas
DELPHI/14delphi/: Lab10.ini  MyIni.ini  Project1.dpr  Unit1.pas  Unit2.pas  Unit3.dfm  Unit3.pas  lab1.dfm  lab1.pas  lab11.dpr  lab3.dcu  lab3.dfm  lab3.pas  lab33.dof  lab33.dpr  lab4.dfm  lab4.pas  lab44.dpr  lab5.dfm  lab5.pas  lab55.dpr  lab6.dfm  lab6.pas  lab8.dcu  lab8.dfm  lab8.pas  lab88.dof  lab9.dfm  lab9.pas  lla.dpr  moduleforlab7.pas
DELPHI/1delphi/: Unit1.dfm  Unit1.pas
DELPHI/2delphi/: Unit1.dfm  Unit1.pas
DELPHI/3delphi/: Unit1.dfm  Unit1.pas
DELPHI/4delphi/: Unit1.dfm  Unit1.pas
DELPHI/5delphi/: Unit1.dcu  Unit1.dfm  Unit1.pas
DELPHI/6delphi/: Unit1.dfm  Unit1.pas
DELPHI/7delphi/: Новый текстовый документ.txt
DELPHI/8delphi/: lab8.pas  lab88.dof
DELPHI/lab/: lab3.dcu  lab3.dfm  lab3.pas  lab33.dof  lab33.dpr  lab9.dcu  lab9.dfm  lab9.pas  moduleforlab7.dcu  moduleforlab7.pas
DELPHI/lab8/: lab8.dfm  lab88.dpr
Prolog/: семья.doc
Prolog/10prolog/: prolog10.BAK  prolog10.pro
Prolog/11prolog/: 11prolo.BAK  11другой вар.BAK  11другой вар.pro  DataBase.txt
Prolog/13prolog/: main.BAK  main.pro
Prolog/2prolog/: 2prolog.pro
Prolog/3prolog/: 3prolog.BAK  3prolog.pro  3лаба.docx
Prolog/4prolog/: 4abolatory.BAK  4abolatory.pro
Prolog/5prolog/: fifth_lab.BAK  fifth_lab.pro  lab_5.docx
Prolog/6prolog/: 6laba.BAK  6laba.pro  MAINTASK.pro  lab_6.docx
Prolog/7prolog/: 7lab.BAK  7lab.pro
Prolog/8prolog/: 8labaProlog.BAK  8labaProlog.pro  prolog8.docx
Prolog/9prolog/: 9лабаПролог.BAK  9лабаПролог.pro
Prolog/VIP52/: Intro.htm  README.TXT
Prolog/VIP52/HTML/vipexamples/geni/: Thumbs.db  about.htm  animal.htm  geni_cgiprogram.htm  pdcindex.htm  program.htm  readme.htm  starting.gni  starting.htm  tyre.gni  tyre.htm
Prolog/VIP52/HTML/vipexamples/geni/animals/: Thumbs.db  albatros.htm  animals.htm  bird3.htm  cheetah.htm  flywell.htm  giraffe.htm  meateat.htm  swim.htm
Prolog/VIP52/HTML/vipexamples/geni/car/: Thumbs.db  car1.htm  carrepht.htm  motor.htm  problem.htm  start1.htm  start2.htm  start3.htm  start4.htm  tyre.htm  tyre1.htm  tyre2.htm
Prolog/VIP52/HTML/vipexamples/geni/images/: Thumbs.db
Prolog/lab9/: rabota_9.doc
Pygame/Algorithms/: graf.py  ovarlap.py  qs.py  рекурсия.py
Python/Algorithms/: декстра.py  хэш табицы.py
Python/DinoGame/: Ya_P_igra_Zadanie_po_kursovoy_Alenovich.doc  bird.py  bullet.py  button.py  globalVars.py  items.py  lab4.py  utils.py
java/java2/: 1javaReport.docx
java/java3/: 3lb.txt
java/java4/: 4javaReport.docx  ~$avaReport.docx
java/java5/: .classpath
java/java7/: .classpath  7javaReport.docx  ~$avaReport.docx
Теория информации/1т.и/: Interface.py  encription.py  Отчет.docx  Отчет1.docx
Теория информации/lab3/: Lab3.sln
Теория информации/lab4/: Lab4.sln  Lab4.userprefs  UpgradeLog.XML
(+7928 files in other folders)
