rule(1,"non connection problem","your battery is not connected properly to your starter",[11],"")
rule(2,"Starting","problem",[1,2],"")
rule(3,"Starting","non connection problem",[3,4,5],"")
rule(4,"problem","your starter is broken change it",[5,6],"")
rule(5,"Starting","battery problem",[7],"")
rule(6,"battery problem","your battery is broken change it",[7],"")
rule(7,"Starting","key problem",[8],"")
rule(8,"key problem","broken ignition key",[9],"")
rule(9,"broken ignition key","change the ignition key and the lock cylinder",[],"")
rule(10,"key problem","missing spare key",[10],"")
rule(11,"non connection problem","distributor",[12],"")
rule(12,"distributor","spark plug",[16],"")
rule(13,"distributor","that the distributor is wet and needs to be cleaned",[13],"car\\start4.htm")
rule(14,"distributor","that the distributor top needs to be replaced",[14],"car\\start4.htm")
rule(15,"distributor","that your distributor must be adjusted",[15],"")
rule(16,"spark plug","that you need to replace the plug wires",[17],"")
rule(17,"spark plug","that you need to clean the spark plug and adjust your ignition",[18],"")
rule(18,"spark plug","that you need to replace the air filter and/or adjust the air/gas mix",[19],"")
rule(19,"spark plug","that you need to change your spark plug",[21],"")
rule(20,"spark plug","that you need to have your gassystem checked",[20],"")
rule(21,"missing spare key","change the ignition key and have a copy made",[],"")
rule(22,"key problem","you better use the spare key, and then your problems may be solved",[],"")
rule(23,"problem","your battery must be recharged, and all your connections must be OK",[],"")
cond(1,"your instrumentpanel is lit up","car\\carrepht.htm")
cond(2,"when you turn the key your starter clicks but doesn't turn","")
cond(3,"when you turn the lights on, there is light on your car","")
cond(4,"the light is as bright as usual","")
cond(5,"all connections to your battery are ok","")
cond(6,"your battery is fully charged","")
cond(7,"you are unable to charge the battery","")
cond(8,"your ignition key has broken","")
cond(9,"the rest of the key is still in the lock cylinder","")
cond(10,"you do not have a spar key","")
cond(11,"your starter is not turning normally","")
cond(12,"your motor is turning but not starting","car\\start1.htm")
cond(13,"your distributor is wet","")
cond(14,"your distributor is broken","")
cond(15,"your distributor is in the wrong position","")
cond(16,"your distributor is ok","car\\start2.htm")
cond(17,"your plug wires is broken and with visible damage","")
cond(18,"your spark plug is wet and dirty ","")
cond(19,"your spark plug is dark grey","")
cond(20,"your spark plug is ok","car\\start1.htm")
cond(21,"your spark plug is burnt, or the electrodes are burnt out","")
topic("Starting","")
default_startpage("starting.htm")