rule(1,"Tyreproblem","flat tyre",[1],"")
rule(2,"Tyreproblem","deformed tyre",[2,3],"")
rule(3,"Tyreproblem","wear tyre",[4,5],"")
rule(4,"flat tyre","deformed tyre",[2,3],"")
rule(5,"flat tyre","wear tyre",[4,5],"")
rule(6,"flat tyre","tyre with no air",[6],"")
rule(7,"flat tyre","leaking tyre",[7],"")
rule(8,"flat tyre","repair tyre",[8],"")
rule(9,"deformed tyre","tyre which needs to be changed",[15],"")
rule(10,"Tyreproblem","tyre which needs to be repaired",[8],"")
rule(11,"wear tyre","tyre which needs to be changed",[15],"")
rule(12,"tyre with no air","tyre which needs to be repaired",[8],"")
rule(14,"tyre with no air","tyre which needs to be pumped",[9,10],"")
rule(15,"tyre with no air","tyre which needs to be changed",[15],"")
rule(16,"tyre which needs to be repaired","problem you can repair yourself",[16,17,18],"")
rule(17,"tyre which needs to be repaired","tyre which needs to be pumped",[9,10],"")
rule(18,"tyre which needs to be changed","tyre you can change yourself",[16,17,18],"")
rule(19,"tyre which needs to be changed","problem you needs help with",[12,13],"")
rule(20,"tyre which needs to be changed","problem you needs help with from roadservice",[14],"")
rule(21,"leaking tyre","change the air valve",[],"")
rule(22,"problem you can repair yourself","repair it yourself",[],"")
rule(23,"problem you needs help with","ask for help",[],"")
rule(24,"problem you needs help from with roadservice","call roadservice",[],"")
rule(25,"tyre you can change yourself","change it yourself",[],"")
rule(26,"tyre which needs to be pumped","pump your tyre",[],"")
rule(27,"tyre which needs to be repaired","problem you needs help with",[12,13],"")
rule(28,"tyre which needs to be changed","you needs to go to the nearest phone and call roadservice",[],"")
cond(1,"you have a flat tyre","car\\carrepht.htm")
cond(2,"you have a deformed tyre","car\\problem.htm")
cond(3,"you have a dent on your wheel rim","car\\problem.htm")
cond(4,"the tyre is worn","car\\problem.htm")
cond(5,"the tyre is badly worn","car\\problem.htm")
cond(6,"the air did go out fast","")
cond(7,"you noticed air bubbles comming from the air valve","")
cond(8,"you want to repair the tyre","car\\tyre2.htm")
cond(9,"you want to pump the tyre","")
cond(10,"you have a pump","")
cond(11,"you know how to use it","")
cond(12,"you know somebody with the knowhow","")
cond(13,"he/she is available","")
cond(14,"you are near to a phone","")
cond(15,"you want to change your tyre","")
cond(16,"you got a wheel brace","")
cond(17,"you got a jack","")
cond(18,"you are in good condition","")
topic("Tyreproblem","")
default_startpage("tyre.htm")