rule(1,"carnivore","cheetah",[1,2],"animals\\cheetah.htm")
rule(2,"carnivore","tiger",[1,3],"<img src=\"animals/tiger02.jpg\">")
rule(3,"ungulate","giraffe",[5,2,4],"<img src=\"animals/giraffe0.jpg\">")
rule(4,"ungulate","zebra",[3],"<img src=\"animals/zebra.jpg\">")
rule(5,"bird","ostrich",[5,7,8],"<img src=\"animals/3bird.jpg\">")
rule(6,"bird","penguin",[9,10,8],"<img src=\"animals/pen.jpg\">")
rule(7,"bird","albatross",[11],"animals\\albatros.htm")
rule(8,"animal","mammal",[12,13],"")
rule(9,"animal","bird",[9,14],"")
rule(10,"mammal","carnivore",[15],"")
rule(11,"mammal","ungulate",[16],"")
cond(1,"it has tawny color","animals\\animals.htm")
cond(2,"it has dark spots","animals\\animals.htm")
cond(3,"it has black stripes","animals\\animals.htm")
cond(4,"it has long neck","animals\\giraffe.htm")
cond(5,"it has long legs","<img src=\"animals/longlegs.jpg\">")
cond(6,"it does fly","<img src=\"animals/fly.jpg\">")
cond(7,"it has a long neck","animals\\animals.htm")
cond(8,"it has a black and white color","animals\\animals.htm")
cond(9,"it has feathers","animals\\bird3.htm")
cond(10,"it swims","animals\\swim.htm")
cond(11,"it does fly well","animals\\flywell.htm")
cond(12,"it has hair","animals\\animals.htm")
cond(13,"it does give milk","animals\\animals.htm")
cond(14,"it lays eggs","<img src=\"animals/egg.jpg\">")
cond(15,"it eats meat ","animals\\meateat.htm")
cond(16,"it does chew cud","animals\\animals.htm")
topic("animal","I will try to guess which animal you are thinking of")
default_startpage("animal.htm")
